--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,5 @@
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "general";
 @import "header";
 
-/* use this file to import all others */
+/* use this file to   import all others */
